# Training_project_2

./: README.md
Training_project-/: CMakeLists.txt
Training_project-/headers/: company.h  department.h  employee.h
Training_project-/src/: Training_Project.cpp  company.cpp  department.cpp  employee.cpp
